# microalgae-biofertilizer-review

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
data/interim/: classified_papers.json  deduplicated_papers.json  excluded_papers.json  high_quality_papers.json  merged_sciai_classified.json  quality_scored_papers.json  quality_summary.json  review_papers.json  sciai_analyzed_papers.json  screened_papers.json
data/raw/: aminer_papers.json  pubmed_papers.json
data/report/: report.docx  report.md
evals/: test-cases.json
references/: keywords.md  quality-checklist.md  report-template.md  search-config.md
scripts/: 01-search-aminer.py  01_search_aminer.py  02-search-pubmed.py  02_search_pubmed.py  03-search-sciai.py  03_search_sciai.py  04-deduplicate-merge.py  04_deduplicate_merge.py  05-screen-filter.py  05_screen_filter.py  06_classify.py  07_quality_score.py  08-visualize.py  08_visualize.py  09-generate-report.py  09_generate_report.py  10_export_pdf.py  utils.py
tests/: test_workflow.py
